# Magnolia

./: .example.env  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: ci.yml
bot/: Cargo.toml
bot/src/: config.rs  main.rs
bot/src/commands/: config.rs  devforum_self_role.rs  faq.rs  mod.rs  placeholder.rs
bot/src/components/: mod.rs  placeholder.rs  verify_devforum_rank.rs
bot/src/modals/: mod.rs  placeholder.rs
builders/: Cargo.toml
builders/src/: command_option.rs  component.rs  lib.rs  locale.rs  modal.rs  model.rs
src/: main.rs  model.rs
src/builders/: component.rs  mod.rs  modal.rs
src/commands/: command_handler.rs  mod.rs  placeholder.rs
src/components/: builders.rs  component_handler.rs  mod.rs  placeholder.rs
src/modals/: builders.rs  mod.rs  modal_handler.rs  placeholder.rs
